# nand2tetris_rust

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
ch10_11_compiler/: Cargo.toml
ch6_assembler/: .gitignore
ch6_assembler/src/tools/: mod.rs  parser.rs
ch7_ch8_assembler/: .gitignore
ch7_ch8_assembler/parser/src/: command_type.rs
ch7_ch8_vm_translator/: README.md
ch7_ch8_vm_translator/code_writer/src/: command_assembly.rs  lib.rs
ch7_ch8_vm_translator/parser/src/: arithmetic_type.rs  parser.rs
ch7_ch8_vm_translator/src/: main.rs
code_writer/: Cargo.toml
code_writer/src/: arithmetic_assembly.rs  arithmetic_type.rs  code_writer.rs  command_assembly.rs  command_type.rs  lib.rs  optimize.rs
parser/: Cargo.toml
parser/src/: arithmetic_type.rs  command_type.rs  lib.rs  parser.rs
src/: lib.rs  main.rs
src/lib/: code.rs  parser.rs
src/parser/: enums.rs  mod.rs  parser.rs
src/tools/: code.rs  enums.rs  mod.rs  parser.rs  symbol_table.rs
