[package]
name = "vm_transtalor"
version = "1.0.0"
authors = ["yusuke ota <33338085+yusuke-ota@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parser = { path = "./parser"}
code_writer = { path = "./code_writer"}
